<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPost">

    <TextView
        android:id="@+id/tv_postTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Found:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemDetailsHeading" />

    <TextView
        android:id="@+id/tv_itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tv_postTypeLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_postTypeLabel"
        app:layout_constraintTop_toTopOf="@+id/tv_postTypeLabel" />

    <TextView
        android:id="@+id/tv_timeSinceLostOrFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="2 days ago"
        app:layout_constraintBottom_toBottomOf="@+id/tv_WhenLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_WhenLabel"
        app:layout_constraintTop_toTopOf="@+id/tv_WhenLabel" />

    <TextView
        android:id="@+id/tv_WhenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/When"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_postTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_postTypeLabel" />

    <TextView
        android:id="@+id/tv_atLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/At"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_WhenLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_WhenLabel" />

    <TextView
        android:id="@+id/tv_locationFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tv_atLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_atLabel"
        app:layout_constraintTop_toTopOf="@+id/tv_atLabel" />

    <TextView
        android:id="@+id/tv_descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ItemDescriptionLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_atLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_atLabel" />

    <TextView
        android:id="@+id/tv_itemDescription"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_descriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/tv_descriptionLabel" />

    <TextView
        android:id="@+id/tv_itemDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/ItemDetailsHeading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userDetailsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ContactUserPrompt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_itemDescription"
        app:layout_constraintTop_toBottomOf="@+id/tv_itemDescription" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/UserNameLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_userDetailsHeading"
        app:layout_constraintTop_toBottomOf="@+id/tv_userDetailsHeading" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/tv_userPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PhoneNumberLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tv_userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userPhoneLabel"
        app:layout_constraintStart_toEndOf="@+id/tv_userPhoneLabel"
        app:layout_constraintTop_toTopOf="@+id/tv_userPhoneLabel" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/Delete"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="@+id/btn_back" />

    <TextView
        android:id="@+id/tv_deleteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/DeleteLabel"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="@+id/btn_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>